# gpt_from_scratch

./: pyproject.toml
gpt_from_scratch/: 01_micrograd.ipynb
notebooks/: 01_micrograd.ipynb
