[tool.poetry]
name = "gpt-from-scratch"
version = "0.1.0"
description = ""
authors = ["mdlngeorges <mdlngeorges@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
graphviz = "^0.20.1"
torch = "^2.1.1"
torchvision = "^0.16.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
